Changes messages to EN